--- a/Downloads/SerenProject/ReTestAndroid/app/build.gradle
+++ b/Downloads/SerenProject/ReTestAndroid/app/build.gradle
@@ -30,14 +30,20 @@ android {
 
 dependencies {
 
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
-
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
-    implementation 'com.google.android.gms:play-services-location:18.0.0'
 }
